--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.1.0",
-    "jquery": "3.3.1",
-    "core-js": "2.5.5",
-    "zone.js": "0.8.26",
-    "bootstrap": "4.1.2",
-    "popper.js": "1.14.3",
-    "rxjs-compat": "6.2.2",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
     "@angular/core": "6.0.0",
     "@angular/forms": "6.0.0",
-    "@angular/common": "6.0.0",
-    "@angular/router": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@swimlane/ngx-datatable": "13.0.1",
     "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/router": "6.0.0",
     "@ng-bootstrap/ng-bootstrap": "2.2.1",
-    "@angular/platform-browser-dynamic": "6.0.0"
+    "@swimlane/ngx-datatable": "13.0.1",
+    "bootstrap": "4.1.2",
+    "core-js": "2.5.5",
+    "debounce": "^1.2.0",
+    "jquery": "3.3.1",
+    "popper.js": "1.14.3",
+    "rxjs": "6.1.0",
+    "rxjs-compat": "6.2.2",
+    "zone.js": "0.8.26"
   },
   "scripts": {
     "ng": "ng",
